@@ -1,0 +1,6 @@
+#tb 0: 1/10
+0,          0,          0,        1,  6814720, 0x1365f8ef
+0,          1,          1,        1,  6814720, 0x90838983
+0,          2,          2,        1,  6814720, 0xf0cc3131
+0,          3,          3,        1,  6814720, 0xc07e404d
+0,          4,          4,        1,  6814720, 0x945962dd
